--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -21,8 +21,8 @@ jobs:
           key: cache-199a115
 
       - name: prime-cache-199a115
-        run: |
-          if [ "${{ steps.cache-step.outputs.cache-hit }}" == "true" ]; then
+        run: echo "Cache hit: ${{ steps.cache-step.outputs.cache-hit }}"
+
             echo "Cache hit"
           else
             echo "Cache miss"
