--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -21,4 +21,9 @@ jobs:
           key: cache-199a115
 
       - name: prime-cache-199a115
-        run: echo "Cache hit: ${{ steps.cache-step.outputs.cache-hit }}"
+        run: |
+          if [ "${{ steps.cache-step.outputs.cache-hit }}" == "true" ]; then
+            echo "Cache hit"
+          else
+            echo "Cache miss"
+          fi
