--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,10 +1,8 @@
 name: CI Cache Workflow
 
 on:
-  push:
-    branches:
-      - main
-
+  workflow_dispatch:
+  
 jobs:
   cache-job:
     runs-on: ubuntu-latest
